--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a53074dd",
+   "id": "8c1cbc50",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9e690384",
+   "id": "7a5ac098",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bdf7321c",
+   "id": "3304bfe1",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6cbace84",
+   "id": "9c31ab31",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "391e542f",
+   "id": "9b1da43d",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3b0b7900",
+   "id": "7244ed45",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0969265e",
+   "id": "f8206089",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2dff5d9f",
+   "id": "3e0a1197",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1368ac73",
+   "id": "e688ca01",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d902f4dd",
+   "id": "400a99b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1ead75d3",
+   "id": "2948faab",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3375fa3b",
+   "id": "1748df47",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "31d5f883",
+   "id": "f3fc490e",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d51468d3",
+   "id": "2ffc02c5",
    "metadata": {},
    "outputs": [
     {
@@ -293,10 +293,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f9c53e7",
+   "id": "f71e6a63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = qwertyuiop\n",
+    "s "
+   ]
   }
  ],
  "metadata": {
