--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7c948aa7",
+   "id": "a87ab56f",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "30454a7a",
+   "id": "a91f9d45",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0025420d",
+   "id": "2eb30562",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "684d62db",
+   "id": "ee5b0222",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "91313d6e",
+   "id": "209d5e54",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "67648d1a",
+   "id": "17926be2",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "bc522c4d",
+   "id": "ab49dc76",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "cd21a773",
+   "id": "207a7d21",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6c39b945",
+   "id": "00af453e",
    "metadata": {},
    "outputs": [
     {
@@ -518,13 +518,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "c9b46b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1418435804.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[101], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Jaspreet Singh\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "Jaspreet Singh\n",
+    "len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c22a4c11",
+   "id": "17096d64",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Jaspreet"
-   ]
+   "source": []
   }
  ],
  "metadata": {
