--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a87ab56f",
+   "id": "20912349",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a91f9d45",
+   "id": "ac97254d",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "2eb30562",
+   "id": "61d7efd5",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ee5b0222",
+   "id": "a292f097",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "209d5e54",
+   "id": "563eec2a",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "17926be2",
+   "id": "30beaeba",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "ab49dc76",
+   "id": "02e82470",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "207a7d21",
+   "id": "f16e82dd",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "00af453e",
+   "id": "214f623f",
    "metadata": {},
    "outputs": [
     {
@@ -518,28 +518,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "c9b46b9f",
+   "execution_count": 104,
+   "id": "4ba8f3f0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1418435804.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[101], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Jaspreet Singh\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Jaspreet Singh\n",
+    "s = 'Jaspreet Singh'\n",
     "len(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17096d64",
+   "id": "c16b5bc3",
    "metadata": {},
    "outputs": [],
    "source": []
