--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6553ced",
+   "id": "812b1cbf",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a475bbcc",
+   "id": "fc2a6da1",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be5c76de",
+   "id": "20d6dff0",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a64eb4f0",
+   "id": "a93ca63e",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0f7609b5",
+   "id": "8637f654",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a70cc593",
+   "id": "cac8040e",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "72d4e60d",
+   "id": "cb4693f0",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1a579d5a",
+   "id": "af602fc9",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc826381",
+   "id": "569297aa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abaf4047",
+   "id": "64ebc236",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2c1acb89",
+   "id": "cba9ecbf",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "140f1c8f",
+   "id": "87fdc50f",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "71e8e18c",
+   "id": "51a82cb3",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e359972f",
+   "id": "8fdee148",
    "metadata": {},
    "outputs": [
     {
@@ -293,12 +293,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f5ac55f",
+   "id": "0e75704f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = qwertyuiop\n",
-    "s "
+    "word = input(\"Enter a word: \")\n",
+    "index = input(\"Enter an index: \")\n",
+    "\n",
+    "if index\n",
+    "s [555]"
    ]
   }
  ],
