--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e310247c",
+   "id": "306ce26e",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "95ff1310",
+   "id": "5c42fd0e",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e5dad06a",
+   "id": "d947d78c",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cf1033ee",
+   "id": "14ec4c70",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "cf771894",
+   "id": "ddba962e",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0b6a0982",
+   "id": "a448fd6d",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a982c183",
+   "id": "0010a51a",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d4a53180",
+   "id": "aa9fdf10",
    "metadata": {},
    "outputs": [
     {
@@ -255,10 +255,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020a218e",
+   "id": "ab708140",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test= input('please enter a text')\n",
+    "number=input('please enter a number')\n",
+    "if number < 0:\n",
+    "    print('This is too low')\n",
+    "    number"
+   ]
   }
  ],
  "metadata": {
