--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e62f79a9",
+   "id": "2923245f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "17983877",
+   "id": "e4a45203",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c5737a",
+   "id": "d48cfb29",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d43dcd",
+   "id": "b5d40415",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0f9de9a",
+   "id": "ccd75405",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "be478d94",
+   "id": "7f22e90a",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "449b735e",
+   "id": "29977767",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f97b5d3a",
+   "id": "48f0ef82",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eec8677f",
+   "id": "4b3d24fb",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "29e73989",
+   "id": "fffee3a8",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "56e588e9",
+   "id": "9320080f",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e19bf926",
+   "id": "c2997bdd",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "98b37f0b",
+   "id": "05b30d31",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "613d7c52",
+   "id": "775d6ebb",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "eb919f18",
+   "id": "598d2587",
    "metadata": {},
    "outputs": [
     {
@@ -331,8 +331,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "id": "b2d48773",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word:qwer\n",
+      "Enter an index3\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input('Enter a word:')\n",
+    "ind = input('Enter an index')\n",
+    "ind = int(ind)\n",
+    "\n",
+    "if ind<0:\n",
+    "    print"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "baeccd6a",
+   "id": "bf427009",
    "metadata": {},
    "outputs": [],
    "source": []
