--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c7346ff8",
+   "id": "2296e0f2",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2c08c302",
+   "id": "c0b0f7f9",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e24391af",
+   "id": "23533f91",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61df6c4c",
+   "id": "1484d5af",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "955b24cf",
+   "id": "a4b0f562",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "58bc7e5b",
+   "id": "6b181d78",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e44e53d9",
+   "id": "65ecc051",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f5a3ff91",
+   "id": "d07fdb6e",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0d10992b",
+   "id": "04af3ce8",
    "metadata": {},
    "outputs": [
     {
@@ -199,10 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3237d343",
+   "id": "0924ff66",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "txt1 = input('Enter the string : ')\n",
+    "id1 = input('Enter the index : ')\n",
+    "if "
+   ]
   }
  ],
  "metadata": {
