--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "812b1cbf",
+   "id": "cea3c264",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fc2a6da1",
+   "id": "442b92ca",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20d6dff0",
+   "id": "27b1cd72",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a93ca63e",
+   "id": "589d8219",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8637f654",
+   "id": "c6325c2d",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cac8040e",
+   "id": "9130d95b",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cb4693f0",
+   "id": "ced891b3",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "af602fc9",
+   "id": "4d3a1f4a",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569297aa",
+   "id": "d30d907a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ebc236",
+   "id": "d41dcd6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cba9ecbf",
+   "id": "ae059f67",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "87fdc50f",
+   "id": "d6112a4d",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "51a82cb3",
+   "id": "9666a1d8",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8fdee148",
+   "id": "920cff34",
    "metadata": {},
    "outputs": [
     {
@@ -293,15 +293,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e75704f",
+   "id": "eff87697",
    "metadata": {},
    "outputs": [],
    "source": [
     "word = input(\"Enter a word: \")\n",
     "index = input(\"Enter an index: \")\n",
     "\n",
-    "if index\n",
-    "s [555]"
+    "if index > len(word):\n",
+    "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
+    "else word\n",
+    "s "
    ]
   }
  ],
