--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "20912349",
+   "id": "bc21ed96",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ac97254d",
+   "id": "99f457c6",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "61d7efd5",
+   "id": "72cf74be",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "a292f097",
+   "id": "d3a7a7a4",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "563eec2a",
+   "id": "bfc06419",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "30beaeba",
+   "id": "1e60fe63",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "02e82470",
+   "id": "af509777",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "f16e82dd",
+   "id": "cc30f698",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "214f623f",
+   "id": "0c450a06",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "4ba8f3f0",
+   "id": "4edc38a1",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c16b5bc3",
+   "id": "7932b8fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 'pineapple'\n",
+    "\n",
+    "word = input('Enter a word: ')\n",
+    "index = input('Enter a number: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "845514fd",
    "metadata": {},
    "outputs": [],
    "source": []
