--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "021de6ed",
+   "id": "6fa16e0a",
    "metadata": {},
    "outputs": [
     {
@@ -178,10 +178,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe5b54d8",
+   "id": "23576130",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "str1 = input('Enter string: ')\n",
+    "num1 = input('Enter number beyond the index of string: ')\n",
+    "num1 = int(num1)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
