--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "73b361e7",
+   "id": "7643460f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "780a781d",
+   "id": "81d751ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2dbd4b94",
+   "id": "3abd962b",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9f20b341",
+   "id": "01e67b8d",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ab415136",
+   "id": "a347e086",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59d29ec6",
+   "id": "e37e59f2",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0dd94178",
+   "id": "4981c63d",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ccac1451",
+   "id": "9195b4af",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9710c309",
+   "id": "d374ad92",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "db7044c2",
+   "id": "8fa6613a",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "20e59a14",
+   "id": "6241babb",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0439ab3e",
+   "id": "f740e9c8",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2efb1dc3",
+   "id": "b3f263d1",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "583bbe2a",
+   "id": "f8b1324a",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e6fce571",
+   "id": "e23151f6",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "683a1e85",
+   "id": "cd77b255",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b012613e",
+   "id": "6e610989",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1db9721a",
+   "id": "348317fc",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "39bc1947",
+   "id": "172144e4",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c7a7a8f8",
+   "id": "710b2f14",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ae3d3555",
+   "id": "a331b46c",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "40958d0d",
+   "id": "481a2578",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7b5e8e7e",
+   "id": "8fe92dee",
    "metadata": {},
    "outputs": [
     {
@@ -503,20 +503,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63d92064",
+   "id": "16d9e89e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "string=input()\n",
-    "numeric=input()\n",
+    "string=input('Write your favourite word: ')\n",
+    "numeric=input('Chose a number: ')\n",
     "\n",
-    "if numeric<0\n",
-    "\n",
-    "if\n",
-    "\n",
+    "if numeric<0:\n",
+    "    print('Index is too low')\n",
+    "if numeric>len(string):\n",
+    "    print('Index is too high')\n",
     "else:\n",
-    "    print (string numeric)"
+    "    print ({string} {numeric})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10217a3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
