--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,10 +187,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c612506a",
+   "id": "d67eb511",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input ('Enter a word')\n",
+    "index = int (input ('Enter an index number: '))\n",
+    "if s == 10 :\n",
+    "    print('you got it')\n",
+    "elif x < 10 :\n",
+    "    print ('Too low')\n",
+    "elif x > 10:\n",
+    "    print ('Too High')"
+   ]
   }
  ],
  "metadata": {
