--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7fbde6de",
+   "id": "c2228763",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "54b5cc66",
+   "id": "3cb4ab1b",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "55ffedb4",
+   "id": "eb784c12",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ac471978",
+   "id": "c509e12f",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c9b33d28",
+   "id": "92f05374",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "da5dca4c",
+   "id": "022bc67d",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "08c75c6c",
+   "id": "e7e8593c",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e9f33138",
+   "id": "49296778",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4d3ebd2a",
+   "id": "c24bae93",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0cdc4f59",
+   "id": "c962bbc4",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "cc7ac337",
+   "id": "e8551a02",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9c3f7ffc",
+   "id": "229eea35",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6d98a980",
+   "id": "f94122e3",
    "metadata": {},
    "outputs": [
     {
@@ -303,13 +303,16 @@
     }
    ],
    "source": [
-    "text=input(\"Write a name of a fruit\")\n"
+    "text=input(\"Write a name of a fruit\")\n",
+    "index=input(\"Write a inxed number to get the character\")\n",
+    "int(index)\n",
+    "if inde"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae950bdd",
+   "id": "387fc6e9",
    "metadata": {},
    "outputs": [],
    "source": []
