--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "306ce26e",
+   "id": "2bd23c8e",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5c42fd0e",
+   "id": "33e2820e",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d947d78c",
+   "id": "a5c57a5b",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "14ec4c70",
+   "id": "f9f8ab40",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ddba962e",
+   "id": "f83e2730",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a448fd6d",
+   "id": "16b942b5",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0010a51a",
+   "id": "0ad05845",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "aa9fdf10",
+   "id": "1c9bb621",
    "metadata": {},
    "outputs": [
     {
@@ -255,15 +255,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab708140",
+   "id": "b38ebf38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test= input('please enter a text')\n",
+    "text= input('please enter a text')\n",
     "number=input('please enter a number')\n",
+    "count=len(text)\n",
     "if number < 0:\n",
     "    print('This is too low')\n",
-    "    number"
+    "    number=input('Try again!')\n",
+    "elif count > number:\n",
+    "    print('this is too high')\n",
+    "    number=input('Try again!')\n",
+    "else:\n",
+    "    \n",
+    "    "
    ]
   }
  ],
