--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2923245f",
+   "id": "30de290c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e4a45203",
+   "id": "a9686eb4",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d48cfb29",
+   "id": "2ed75d81",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d40415",
+   "id": "bb139902",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ccd75405",
+   "id": "5af4016c",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f22e90a",
+   "id": "a8c03aa6",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "29977767",
+   "id": "d1a1c6b8",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "48f0ef82",
+   "id": "1d957bea",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4b3d24fb",
+   "id": "96337c7f",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fffee3a8",
+   "id": "44389b73",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9320080f",
+   "id": "01c1a40d",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c2997bdd",
+   "id": "a75aa5d5",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "05b30d31",
+   "id": "e4fc89f5",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "775d6ebb",
+   "id": "9a79f23c",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "598d2587",
+   "id": "2e5ab9f1",
    "metadata": {},
    "outputs": [
     {
@@ -331,32 +331,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "b2d48773",
+   "execution_count": null,
+   "id": "57248248",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a word:qwer\n",
-      "Enter an index3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word = input('Enter a word:')\n",
     "ind = input('Enter an index')\n",
     "ind = int(ind)\n",
     "\n",
     "if ind<0:\n",
-    "    print"
+    "    print('Index is too low.')\n",
+    "elif ind>int(len(word)):\n",
+    "    print(f'Index is beyond the length of a the string')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf427009",
+   "id": "9495d6c9",
    "metadata": {},
    "outputs": [],
    "source": []
