--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2296e0f2",
+   "id": "7b3dee41",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c0b0f7f9",
+   "id": "40840f50",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "23533f91",
+   "id": "fe3c1a9d",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1484d5af",
+   "id": "225ec696",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a4b0f562",
+   "id": "5cef01ae",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6b181d78",
+   "id": "21a7f525",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "65ecc051",
+   "id": "bededd06",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d07fdb6e",
+   "id": "759e2a60",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "04af3ce8",
+   "id": "6ea6bfd8",
    "metadata": {},
    "outputs": [
     {
@@ -199,13 +199,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0924ff66",
+   "id": "ecf2dac4",
    "metadata": {},
    "outputs": [],
    "source": [
     "txt1 = input('Enter the string : ')\n",
     "id1 = input('Enter the index : ')\n",
-    "if "
+    "id1 = int(id1)\n",
+    "if id1 < 0 :\n",
+    "    print('You entered negative number')\n",
+    "elif id1 > len(txt) :\n",
+    "    print('You entered too big index')\n",
+    "else :\n",
+    "    print(f'Y)\n",
+    "    "
    ]
   }
  ],
