--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6fa16e0a",
+   "id": "2346b804",
    "metadata": {},
    "outputs": [
     {
@@ -178,14 +178,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23576130",
+   "id": "557cbad8",
    "metadata": {},
    "outputs": [],
    "source": [
     "str1 = input('Enter string: ')\n",
     "num1 = input('Enter number beyond the index of string: ')\n",
     "num1 = int(num1)\n",
-    "\n"
+    "if num1 < 0:\n",
+    "    print(f'{num1} is too low.')\n",
+    "elif num1 > len(str1):\n",
+    "    print()\n"
    ]
   }
  ],
